--- a/Info.plist
+++ b/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>The App needs permission to use the Camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>The App needs permission to access the Photo Library</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>The App needs permission to add to your Photo LIbrary</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
